Fix spacing for navbars for all pages

--- a/public/assets/css/dashboard/dashboard.css
+++ b/public/assets/css/dashboard/dashboard.css
@@ -1,3 +1,7 @@
 body {
   background-color: #f8f9fa;
 }
+
+.home-divider {
+  border-color: #f8f9fa;
+}
